Fri Sep 24 13:40:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * examples/BasicSP/RepoMan_Usage.html:
          Update regarding ORB services rename action

Fri Sep 24 12:49:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.h:
        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/Component/CIF_Component.mpc:
        * tests/CIF/Component/CIF_Component_exec.h:
        * tests/CIF/Component/CIF_Component_exec.cpp:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Added explicit tests for _get_component.

Fri Sep 24 11:51:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ami4ccm_lem_stub.mpb:
        * MPC/config/ciao_servant.mpb:
        * ciao/Containers/Containers.mpc:
        * ciao/Contexts/Context.mpc:
        * ciao/Contexts/Context_Impl_Base_T.h:
        * ciao/Contexts/Context_Impl_Base_T.cpp:
        * ciao/Contexts/Extension/ExtensionContext_T.h:
        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.h:
        * MPC/config/ciao_context_impl.mpb:
        * ciao/Contexts/Context_Impl_Base.h:
        * ciao/Contexts/Context_Impl_Base.cpp:
        * ciao/Contexts/Context_Impl_export.h:
          CIAO context base is now a C++ template so that we can store a
          typed container object reference

Fri Sep 24 10:21:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL3_to_XMI/XMI_For_Sequence/run_test.pl:
          Delete generated xmi files

Fri Sep 24 10:20:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL3_to_XMI/XMI_For_Sequence/run_test.pl:
          Corrected test errors.

Thu Sep 23 20:41:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
